crates/functions/src/tests/encryption/snapshots/encryption/query_decrypt_raw_null_iv_error.snap
---
source: crates/functions/src/tests/encryption/decrypt_raw.rs
assertion_line: 101
description: "\"SELECT \n        DECRYPT_RAW(TO_BINARY('DEADBEEF', 'HEX'), TO_BINARY('0123456789ABCDEF0123456789ABCDEF', 'HEX'), NULL, TO_BINARY('', 'HEX'), 'AES-GCM', TO_BINARY('00112233445566778899AABBCCDDEEFF', 'HEX')) AS null_iv\""
---
"Error: External error: Decryption failed. Check encrypted data, key, AAD, or AEAD tag."
