crates/functions/src/tests/encryption/snapshots/encryption/query_decrypt_raw_roundtrip_aes256.snap
---
source: crates/functions/src/tests/encryption/decrypt_raw.rs
description: "\"WITH encrypted AS (\n        SELECT ENCRYPT_RAW(\n            TO_BINARY('426F6E6A6F7572', 'HEX'),  -- 'Bonjour' in hex\n            TO_BINARY('0123456789ABCDEF0123456789ABCDEF0123456789ABCDEF0123456789ABCDEF', 'HEX'),  -- 32-byte key\n            TO_BINARY('416C736F4E6F745365637265', 'HEX')  -- 12-byte IV (24 hex chars)\n        ) AS result\n    ),\n    parsed AS (\n        SELECT \n            PARSE_JSON(result) AS json_result,\n            TO_BINARY('0123456789ABCDEF0123456789ABCDEF0123456789ABCDEF0123456789ABCDEF', 'HEX') AS key\n        FROM encrypted\n    )\n    SELECT \n        DECRYPT_RAW(\n            TO_BINARY(GET(json_result, 'ciphertext')::VARCHAR, 'HEX'),\n            key,\n            TO_BINARY(GET(json_result, 'iv')::VARCHAR, 'HEX'),\n            TO_BINARY('', 'HEX'),  -- empty AAD\n            'AES-GCM',\n            TO_BINARY(GET(json_result, 'tag')::VARCHAR, 'HEX')\n        ) AS decrypted\n    FROM parsed\""
---
Ok(
    [
        "+----------------+",
        "| decrypted      |",
        "+----------------+",
        "| 426f6e6a6f7572 |",
        "+----------------+",
    ],
)
