crates/functions/src/tests/encryption/snapshots/encryption/query_decrypt_raw_wrong_aad.snap
---
source: crates/functions/src/tests/encryption/decrypt_raw.rs
assertion_line: 137
description: "\"WITH encrypted AS (\n        SELECT ENCRYPT_RAW(\n            TO_BINARY('426F6E6A6F7572', 'HEX'),  -- 'Bonjour' in hex\n            TO_BINARY('0123456789ABCDEF0123456789ABCDEF', 'HEX'),  -- 16-byte key\n            TO_BINARY('416C736F4E6F745365637265', 'HEX'),  -- 12-byte IV (24 hex chars)\n            TO_BINARY('6164646974696F6E616C2064617461', 'HEX')  -- 'additional data' in hex\n        ) AS result\n    ),\n    parsed AS (\n        SELECT \n            PARSE_JSON(result) AS json_result,\n            TO_BINARY('0123456789ABCDEF0123456789ABCDEF', 'HEX') AS key,\n            TO_BINARY('77726F6E672061616420646174610000', 'HEX') AS wrong_aad  -- different AAD\n        FROM encrypted\n    )\n    SELECT \n        DECRYPT_RAW(\n            TO_BINARY(GET(json_result, 'ciphertext')::VARCHAR, 'HEX'),\n            key,\n            TO_BINARY(GET(json_result, 'iv')::VARCHAR, 'HEX'),\n            wrong_aad,  -- using wrong AAD\n            'AES-GCM',\n            TO_BINARY(GET(json_result, 'tag')::VARCHAR, 'HEX')\n        ) AS decrypted\n    FROM parsed\""
---
"Error: External error: Decryption failed. Check encrypted data, key, AAD, or AEAD tag."
